--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ AR IMAGE (.jpg / .png) OR VIDEO (.mp4)
 - get the URL and paste it in the src="URL" inside the <a-plane section
 -->
 
-<html>
+<html> 
   <head>
-<!--     <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
-    <meta name="apple-mobile-webb-app-callable" content="yes" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<!--     <meta name="apple-mobile-webb-app-callable" content="yes" /> -->
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.3/dist/mindar-image-aframe.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
@@ -38,43 +38,75 @@ AR IMAGE (.jpg / .png) OR VIDEO (.mp4)
 <!--       <a-entity geometry="primitive: sphere; radius: 80000" material="src: url(myBlackAndWhiteTexture.jpg); side: back; opacity: 0.7; transparent: true" scale="-1 1 1"></a-entity> -->
 
       <a-assets>
-<!--         <video id="video01" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
-               src="https://cdn.glitch.me/b035f600-71a7-4744-bf72-dfa815efc06e/01_optimized.mp4?v=1699484741854"></video>
+        <video id="video01" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/01_optimized.mp4?v=1699550837704"></video>
         <video id="video02" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
-               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/02_optimized.mp4?v=1699484753907"></video> -->
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/02_optimized.mp4?v=1699550854067"></video>
         <video id="video03" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
-               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/03_optimized.mp4?v=1699484771668"></video>
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/03_optimized.mp4?v=1699550857092"></video>
         <video id="video04" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
-               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/04_optimized.mp4?v=1699484776131"></video>
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/04_optimized.mp4?v=1699550866357"></video>
         <video id="video05" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
-               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/05_optimized.mp4?v=1699484790229"></video>
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/05_optimized.mp4?v=1699550869431"></video>
         <video id="video06" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
-               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/06_optimized.mp4?v=1699484806934"></video>
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/06_optimized.mp4?v=1699550852749"></video>
         <video id="video07" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
-               src="https://cdn.glitch.me/b035f600-71a7-4744-bf72-dfa815efc06e/07_optimized.mp4?v=1699484830178"></video>
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/07_optimized.mp4?v=1699551144228"></video>
         <video id="video08" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
-               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/08_optimized.mp4?v=1699484846530"></video>
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/08_optimized.mp4?v=1699551147170"></video>
         <video id="video09" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
-               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/09_optimized.mp4?v=1699484861730"></video>
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/09_optimized.mp4?v=1699551158020"></video>
         <video id="video10" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
-               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/10_optimized.mp4?v=1699484867400"></video>
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/10_optimized.mp4?v=1699551160808"></video>
         <video id="video11" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
-               src="https://cdn.glitch.me/b035f600-71a7-4744-bf72-dfa815efc06e/11_optimized.mp4?v=1699484885196"></video>
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/11_optimized.mp4?v=1699551172359"></video>
         <video id="video12" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
-               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/12_optimized.mp4?v=1699484899724"></video>
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/12_optimized.mp4?v=1699551175405"></video>
         <video id="video13" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
-               src="https://cdn.glitch.me/b035f600-71a7-4744-bf72-dfa815efc06e/13_optimized.mp4?v=1699484933199"></video>
-<!--         <video id="video14" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
-               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/14_optimized.mp4?v=1699484936560"></video>
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/13_optimized.mp4?v=1699551190677"></video>
+        <video id="video14" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/14_optimized.mp4?v=1699551191914"></video>
         <video id="video15" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
-               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/15_optimized.mp4?v=1699484951262"></video>
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/15_optimized.mp4?v=1699551204489"></video>
         <video id="video16" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
-               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/16_optimized.mp4?v=1699484965014"></video>
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/16_optimized.mp4?v=1699551212613"></video>
         <video id="video17" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
-               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/17_optimized.mp4?v=1699484968528"></video> -->
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/17_optimized.mp4?v=1699551214212"></video>
+        <video id="video18" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/18_optimized.mp4?v=1699551215491"></video>
+        <video id="video19" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/19_optimized.mp4?v=1699551216568"></video>
+        <video id="video20" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/20_optimized.mp4?v=1699551217610"></video>
+        <video id="video21" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/21_optimized.mp4?v=1699551218589"></video>
+        <video id="video22" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/22_optimized.mp4?v=1699551220139"></video>
+        <video id="video23" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/23_optimized.mp4?v=1699551048496"></video>
+        <video id="video24" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/24_optimized.mp4?v=1699551049852"></video>
+        <video id="video25" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/25_optimized.mp4?v=1699551051826"></video>
+        <video id="video26" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/26_optimized.mp4?v=1699551052847"></video>
+        <video id="video27" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/27_optimized.mp4?v=1699551054810"></video>
+        <video id="video28" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/28_optimized.mp4?v=1699551067934"></video>
+        <video id="video29" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/29_optimized.mp4?v=1699551070618"></video>
+        <video id="video30" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/30_optimized.mp4?v=1699551071796"></video>
+        <video id="video31" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/31_optimized.mp4?v=1699551085522"></video>
+        <video id="video32" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/32_optimized.mp4?v=1699551092997"></video>
+        <video id="video33" autoplay="false" loop="true" crossorigin="anonymous" muted playsinline webkit-playsinline
+               src="https://cdn.glitch.global/b035f600-71a7-4744-bf72-dfa815efc06e/33_optimized.mp4?v=1699551096998"></video>
       </a-assets>
 
-<!--       <a-entity vidhandler="video: #video01" mindar-image-target="targetIndex: 0">
+      <a-entity vidhandler="video: #video01" mindar-image-target="targetIndex: 0">
         <a-plane
           src="#video01"
           position="0 0 0"
@@ -91,7 +123,7 @@ AR IMAGE (.jpg / .png) OR VIDEO (.mp4)
           width="2.7"
           rotation="0 0 0"
         ></a-plane>
-      </a-entity> -->
+      </a-entity>
       <a-entity vidhandler="video: #video03" mindar-image-target="targetIndex: 2">
         <a-plane
           src="#video03"
@@ -140,9 +172,9 @@ AR IMAGE (.jpg / .png) OR VIDEO (.mp4)
       <a-entity vidhandler="video: #video08" mindar-image-target="targetIndex: 7">
         <a-plane
           src="#video08"
-          position="0 0.02 0"
-          height="1.8"
-          width="1.35"
+          position="0.02 0.02 0"
+          height="1.78"
+          width="1.3"
           rotation="0 0 0"
         ></a-plane>
       </a-entity>
@@ -159,7 +191,7 @@ AR IMAGE (.jpg / .png) OR VIDEO (.mp4)
         <a-plane
           src="#video10"
           position="0 0 0"
-          height="1.35"
+          height="1.37"
           width="1.03"
           rotation="0 0 0"
         ></a-plane>
@@ -191,7 +223,7 @@ AR IMAGE (.jpg / .png) OR VIDEO (.mp4)
           rotation="0 0 0"
         ></a-plane>
       </a-entity>
-<!--       <a-entity vidhandler="video: #video14" mindar-image-target="targetIndex: 13">
+      <a-entity vidhandler="video: #video14" mindar-image-target="targetIndex: 13">
         <a-plane
           src="#video14"
           position="0.64 0 0"
@@ -227,7 +259,151 @@ AR IMAGE (.jpg / .png) OR VIDEO (.mp4)
           rotation="0 0 0"
         ></a-plane>
       </a-entity>
- -->
+      <a-entity vidhandler="video: #video18" mindar-image-target="targetIndex: 17">
+        <a-plane
+          src="#video18"
+          position="0.52 0 0"
+          height="1.95"
+          width="2.85"
+          rotation="0 0 0"
+        ></a-plane>
+      </a-entity>
+      <a-entity vidhandler="video: #video19" mindar-image-target="targetIndex: 18">
+        <a-plane
+          src="#video19"
+          position="0.53 0 0"
+          height="1.95"
+          width="2.85"
+          rotation="0 0 0"
+        ></a-plane>
+      </a-entity>
+      <a-entity vidhandler="video: #video20" mindar-image-target="targetIndex: 19">
+        <a-plane
+          src="#video20"
+          position="0.53 0 0"
+          height="1.95"
+          width="2.85"
+          rotation="0 0 0"
+        ></a-plane>
+      </a-entity>
+      <a-entity vidhandler="video: #video21" mindar-image-target="targetIndex: 20">
+        <a-plane
+          src="#video21"
+          position="0 0 0"
+          height="1.35"
+          width="1"
+          rotation="0 0 0"
+        ></a-plane>
+      </a-entity>
+      <a-entity vidhandler="video: #video22" mindar-image-target="targetIndex: 21">
+        <a-plane
+          src="#video22"
+          position="0 0 0"
+          height="1.35"
+          width="1.05"
+          rotation="0 0 0"
+        ></a-plane>
+      </a-entity>
+      <a-entity vidhandler="video: #video23" mindar-image-target="targetIndex: 22">
+        <a-plane
+          src="#video23"
+          position="0 -0.05 0"
+          height="2.1"
+          width="1.55"
+          rotation="0 0 0"
+        ></a-plane>
+      </a-entity>
+      <a-entity vidhandler="video: #video24" mindar-image-target="targetIndex: 23">
+        <a-plane
+          src="#video24"
+          position="0 -0.05 0"
+          height="2.1"
+          width="1.55"
+          rotation="0 0 0"
+        ></a-plane>
+      </a-entity>
+      <a-entity vidhandler="video: #video25" mindar-image-target="targetIndex: 24">
+        <a-plane
+          src="#video25"
+          position="-0.02 0 0"
+          height="1.88"
+          width="1.4"
+          rotation="0 0 0"
+        ></a-plane>
+      </a-entity>
+      <a-entity vidhandler="video: #video26" mindar-image-target="targetIndex: 25">
+        <a-plane
+          src="#video26"
+          position="-0.65 -0.07 0"
+          height="1.8"
+          width="2.67"
+          rotation="0 0 0"
+        ></a-plane>
+      </a-entity>
+      <a-entity vidhandler="video: #video27" mindar-image-target="targetIndex: 26">
+        <a-plane
+          src="#video27"
+          position="0.75 0 0"
+          height="2.15"
+          width="3.25"
+          rotation="0 0 0"
+        ></a-plane>
+      </a-entity>
+      <a-entity vidhandler="video: #video28" mindar-image-target="targetIndex: 27">
+        <a-plane
+          src="#video28"
+          position="0 0 0"
+          height="1.35"
+          width="1.05"
+          rotation="0 0 0"
+        ></a-plane>
+      </a-entity>
+      <a-entity vidhandler="video: #video29" mindar-image-target="targetIndex: 28">
+        <a-plane
+          src="#video29"
+          position="0 -0.02 0"
+          height="1.05"
+          width="1.05"
+          rotation="0 0 0"
+        ></a-plane>
+      </a-entity>
+      <a-entity vidhandler="video: #video30" mindar-image-target="targetIndex: 29">
+        <a-plane
+          src="#video30"
+          position="0 0 0"
+          height="1"
+          width="1"
+          rotation="0 0 0"
+        ></a-plane>
+      </a-entity>
+      <a-entity vidhandler="video: #video31" mindar-image-target="targetIndex: 30">
+        <a-plane
+          src="#video31"
+          position="0.67 0 0"
+          height="2"
+          width="2.3"
+          rotation="0 0 0"
+        ></a-plane>
+      </a-entity>
+      <a-entity vidhandler="video: #video32" mindar-image-target="targetIndex: 31">
+        <a-plane
+          src="#video32"
+          position="0.15 0.07 0"
+          height="1.3"
+          width="1.3"
+          rotation="0 0 0"
+        ></a-plane>
+      </a-entity>
+      <a-entity vidhandler="video: #video33" mindar-image-target="targetIndex: 32">
+        <a-plane
+          src="#video33"
+          position="-0.48 0 0"
+          height="1.7"
+          width="1.95"
+          rotation="0 0 0"
+        ></a-plane>
+      </a-entity>
+
       
     </a-scene>
   </body>
